# jobtrack

./: .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/worlflows/: ci.yml
migrations/alembic/: env.py
migrations/alembic/versions/: 4d4290e90a45_create_events_table.py  7505cebf4e60_create_events_table.py
src/jobtrack/domain/: events.py  state_machine.py
src/jobtrack/storage/: repository.py  schema.py
tests/unit/: test_events.py  test_state_machine.py
